Fix tooltip z-index

--- a/public/css/components/_ui.scss
+++ b/public/css/components/_ui.scss
@@ -53,7 +53,7 @@
     padding: 6px 8px;
     font-size: .875rem;
     border-radius: 4px;
-    z-index: 10;
+    z-index: 100;
     display: none;
 
     .tooltip-arrow {
